Fixed double border when there's succession of filtered posts

--- a/mastodon/app/javascript/styles/tangerineui/layout-single-column.scss
+++ b/mastodon/app/javascript/styles/tangerineui/layout-single-column.scss
@@ -1342,6 +1342,7 @@ body.layout-single-column  {
     border-top: 1px solid var(--color-lines);
     border-bottom: 1px solid var(--color-lines);
     padding: 12px;
+    margin-top: -1px;
 }
 
 /* 📊 Polls */
